<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_welcome"
    tools:context=".WelcomeScreen">



    <LinearLayout
        android:id="@+id/layout_welcome"
        android:layout_width="0dp"
        android:layout_height="560dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/gradient_welcome_white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_marginTop="70dp"
            android:id="@+id/iv_welcomeScreen"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/welcome"
            android:contentDescription="@string/welcome_image" />

        <TextView
            android:id="@+id/tx_Hosgeldin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20sp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/hos_geldiniz" />

        <TextView
            android:id="@+id/tx_HosgeldinMetni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:text="@string/ysk_gunlugume_hosgeldiniz" />

        <TextView
            android:id="@+id/tx_girisYap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/zaten_bir_hesabiniz_var_mi" />

        <Button
            android:id="@+id/btn_welcomeGirisYap"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/gradient_welcome_button"
            android:text="@string/giris_yap" />

        <TextView
            android:id="@+id/tx_kayitOl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/hesabiniz_yoksa" />

        <Button
            android:id="@+id/btn_welcomeKayitOl"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gradient_welcome_button"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:text="@string/kayit_ol" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>